--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "querystring": "^0.2.1",
     "request": "^2.88.2"
   },
+  "scripts":{
+      "start": "node script.js"
+    },
   "type": "module"
 }
