--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "nodemon": "^3.1.4",
+    "os": "^0.1.2",
     "querystring": "^0.2.1",
     "request": "^2.88.2"
   },
-  "scripts":{
-      "start": "node script.js"
-    },
+  "main":"script.js",
+  "scripts": {
+    "start": "node script.js"
+  },
   "type": "module"
 }
